[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "density_model"
version = "0.1.0"
description = "Panel density-forecasting library — Gaussian (μ, σ) forecasts per asset per date, with full training/tuning/ensembling/benchmarking infrastructure and a downstream portfolio-construction example."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",                          # YAML config loader
    "scipy>=1.11",                          # long-only optimizer fallback (SLSQP)
    "matplotlib>=3.7",                      # plot.py + plot_portfolio.py
    "optuna>=3.0",                          # hyperparameter tuning (scripts/tune.py)
    "arch>=6.0",                            # GARCH(1,1) benchmark (scripts/benchmark.py)
    "pandas_market_calendars>=4.4",         # XNYS session normalization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
